Add new command line options (#133)
* Add option to ignore failures
* Move repository dump functions to TestUtils
* Add command line option to filter tests by review status